[package]
name = "omicron-stress"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
camino = "1.1.4"
clap = { version = "4.3.0", features = ["derive"] }
ctrlc = "3.4.0"
dirs = "5.0.1"
futures = "0.3.28"
http = "0.2.9"
oxide-api = { git = "http://github.com/oxidecomputer/oxide.rs.git", branch = "main" }
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
toml = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
